# nanochat

./: .env.example  .gitignore  CLAUDE.md  decisions.md  findings.md  pyproject.toml  reproduce.md  speedrun_vision.sh  startup.sh  tier2_note.md
data/: inference_results_step1000.json  inference_results_step300_batch10.json  inference_results_step500.json  overfit_dataset.json
data/gundam_samples/: train.json
data/overfit_samples/: inference_results_step1000.json  inference_results_step700.json  val.json
nanochat/: checkpoint_manager.py  engine.py  gpt.py  image_process.py  loss_eval.py  multimodal_dataloader.py  nano_deepseek_ocr.py  tokenizer.py  vision_dataloader.py  vision_eval.py
nanochat/deepencoder/: build_linear.py  clip_sdpa.py  load_pretrained.py  sam_vary_sdpa.py
plan_doc/: DeepEncoder_loading_plan.md  PLAN.md  data_plan.md  dataloader.md  findings.md  nano_deepseek_ocr_blueprint.md  overview.md  tokenizer_plan.md  training_plan.md  vision_sample.md  vision_tasks.md
plan_doc/sidequest/: gundam_mode.md  vllm_inference.md
scripts/: eval_to_html.py  prepare_gundam_data.py  prepare_olmocr.py  upload_vlm_gundam10.py  upload_vlm_overfit10.py  vis_mid_train.py  vis_tok_train.py  vision_eval.py  vision_sample.py
tasks/: finevision.py  fox.py  omnidocbench.py  overfit_samples.py  vlm_overfit10.py
